syntax = "proto3";

package bluk.games;

import "types/game.proto";

// Search method
message SearchRequest {
  repeated string tags = 1;
};

message SearchResponse {
  repeated Game result = 1;
};

// GetOne method
message GetOneById {
  string id = 1;
};

// FetchFeatured method
message FetchFeaturedResponse {
  repeated Game result = 1;
}